--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -58,6 +58,13 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.sistema.App</mainClass> <!-- Substitua aqui -->
+                    </manifest>
+                </archive>
+            </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
